--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,7 +780,7 @@ section {
   background: #149ddd;
   color: #fff;
 }
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i, .contact .info .resume:hover i {
   background: #149ddd;
   color: #fff;
 }
